# lockstitch

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  design.md  perf.md
.github/workflows/: fuzz.yml  rust.yml
benches/: benchmarks.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aead_dec.rs  aead_enc.rs  hash.rs  new.rs
proofs/: aead-ind-cpa.ocv  aead-ind-cpa.proof  aead-int-ctxt.ocv  aead-int-ctxt.proof  md-ind-ro.ocv  md-ind-ro.proof  stream-ind-cpa.ocp  stream-ind-cpa.ocv  stream-ind-cpa.proof
proptest-regressions/: aegis128l.txt  aegis_128l.txt
proptest-regressions/integration_tests/: constructions.txt
src/: aegis.rs  aegis128l.c  aegis128l.rs  aegis_128l.rs  aegis_256.rs  hkdf.rs  integration_tests.rs  intrinsics.rs  lib.rs  rocca_s.rs
src/aegis/: aegis_128l.rs  aegis_256.rs
src/aegis128l/: aarch64.rs  x86_64.rs
src/aegis_128l/: aarch64.rs  portable.rs  x86_64.rs
src/integration_tests/: constructions.rs  transcripts.rs
src/intrinsics/: aarch64.rs  portable.rs  x86_64.rs
src/rocca_s/: aarch64.rs  portable.rs  x86_64.rs
tests/: constructions.proptest-regressions  constructions.rs  constructions_test.rs  transcripts.proptest-regressions  transcripts.rs  transcripts_test.proptest-regressions  transcripts_test.rs  writers_test.proptest-regressions  writers_test.rs
xtask/: Cargo.toml
xtask/src/: xtask.rs
