[package]
name = "lockstitch"
version = "0.29.0"
edition = "2024"
authors = ["Coda Hale <coda.hale@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Lockstitch is an incremental, stateful cryptographic primitive for symmetric-key cryptographic operations in complex protocols."
homepage = "https://github.com/codahale/lockstitch"
documentation = "https://docs.rs/lockstitch/"
keywords = ["crypto", "aes-128", "sha-256", "hmac", "hazmat"]
categories = ["cryptography", "no-std"]
readme = "README.md"
include = ["src/**/*", "tests/**/*", "LICENSE-*", "README.md", "design.md", "perf.md"]

[dependencies]
aws-lc-rs = { version = "1.12.4", default-features = false, features = ["alloc", "aws-lc-sys"] }
zeroize = "1.8.1"

[features]
default = ["std"]
docs = []
std = []

[workspace]
members = ["benchmarks", "xtask"]

[dev-dependencies]
bolero = "0.12.0"
expect-test = "1.5.1"
hex = "0.4.3"

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-commit-message = "release: version {{version}}"
tag-message = "release: {{crate_name}} version {{version}}"
consolidate-commits = false

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.rust]
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
semicolon_if_nothing_returned = "warn"

[lints]
workspace = true
