[package]
name = "lockstitch"
version = "0.29.0"
edition = "2024"
authors = ["Coda Hale <coda.hale@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Lockstitch is an incremental, stateful cryptographic primitive for symmetric-key cryptographic operations in complex protocols."
homepage = "https://github.com/codahale/lockstitch"
documentation = "https://docs.rs/lockstitch/"
keywords = ["crypto", "aes-128", "sha-256", "hmac", "hazmat"]
categories = ["cryptography", "no-std"]
readme = "README.md"
include = ["src/**/*", "tests/**/*", "LICENSE-*", "README.md", "design.md", "perf.md"]

[dependencies]
aes = { version = "0.8.4", features = ["zeroize"] }
ctr = { version = "0.9.2", features = ["zeroize"] }
hmac = { version = "0.12.1", features = ["reset"] }
sha2 = { version = "0.10.9", default-features = false, features = ["asm"] }
subtle = { version = "2.6.1", default-features = false }
zeroize = "1.8.1"

[features]
default = ["std"]
docs = []
std = ["ctr/std", "hmac/std", "sha2/std", "subtle/std", "zeroize/std"]

[workspace]
members = ["benchmarks", "xtask"]

[dev-dependencies]
bolero = "0.13.3"
expect-test = "1.5.1"
hex = "0.4.3"

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-commit-message = "release: version {{version}}"
tag-message = "release: {{crate_name}} version {{version}}"
consolidate-commits = false

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.rust]
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
semicolon_if_nothing_returned = "warn"

[lints]
workspace = true
