[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
criterion = "0.5.1"
lockstitch = { path = "..", default-features = false, features = ["std"] }

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.release]
release = false
consolidate-commits = false

[lints]
workspace = true
