[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.3.1", features = ["derive"] }
libfuzzer-sys = "0.4.7"
lockstitch = { path = ".." }

[[bin]]
name = "aead_dec"
path = "fuzz_targets/aead_dec.rs"

[[bin]]
name = "aead_enc"
path = "fuzz_targets/aead_enc.rs"

[[bin]]
name = "hash"
path = "fuzz_targets/hash.rs"

[[bin]]
name = "new"
path = "fuzz_targets/new.rs"

[package.metadata]
cargo-fuzz = true

[package.metadata.release]
release = false
