[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.1", features = ["derive"] }
libfuzzer-sys = "0.4.7"
lockstitch = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "aead_dec"
path = "fuzz_targets/aead_dec.rs"
test = false
doc = false

[[bin]]
name = "aead_enc"
path = "fuzz_targets/aead_enc.rs"
test = false
doc = false

[[bin]]
name = "hash"
path = "fuzz_targets/hash.rs"
test = false
doc = false

[[bin]]
name = "new"
path = "fuzz_targets/new.rs"
test = false
doc = false
