[package]
name = "xtask"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["deprecated", "derive"] }
xshell = "0.3.0-pre.2"

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[package.metadata.release]
release = false
consolidate-commits = false

[lints]
workspace = true
